--- a/src/main/webapp/requisitions/template/template.html
+++ b/src/main/webapp/requisitions/template/template.html
@@ -1,11 +1,11 @@
 <div class="requisition-template-admin">
     <div class="page">
         <h2 openlmis-message="configure.rnr.header"></h2>
-        <div class="info-box">
+        <aside>
             <div>{{'program.header' | message}}</div>
             <div>{{vm.program.name}}</div>
             <a ng-click="vm.goToTemplateList()">{{'template.change' | message}}</a>
-        </div>
+        </aside>
 
         <table>
             <thead>
