--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -1,11 +1,40 @@
 .page aside {
   @include clearfix();
   padding: 1em;
-  margin-bottom: 1.4em;
+  margin-bottom: 1em;
   @include box-shadow(0.2em 0.2em 0 $light-shadow);
   border: 0.1em solid $medium-gray;
   background: $very-light-gray;
   text-shadow: 0 0.1em 0 white;
+
+  dl {
+    display: flex;
+    margin: 0em;
+    padding-top: 1em; // offsets dt;
+  }
+
+  dt {
+    display: block;
+    flex: 0 0 auto;
+    width: 0;
+    position: relative;
+    top: -1.2em;
+    white-space: nowrap;
+  }
+
+  dt::after {
+    content: ":";
+  }
+
+  dd {
+    display: block;
+    flex: 1 0 auto;
+    padding-right: 1em;
+
+    &:last-child {
+      padding-right: 0;
+    }
+  }
 
   button{
     @extend .pull-right;
