--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -15,10 +15,12 @@
   {{{styles}}}
 </head>
 <body ng-app="openlmis-core">
-  <header class="kss-header">
-    <div class="logo">
-      <img src="images/logo.png" />
-      <h1>{{options.title}}</h1>
+  <header>
+    <div>
+      <div class="logo">
+        <img src="images/logo.png" />
+        <h1>{{options.title}}</h1>
+      </div>
     </div>
     <nav class="navbar">
       <ul class="nav navbar-nav">
