OLMIS-1349: Directive to place table sort order correctly

--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -18,6 +18,8 @@ $light-shadow: rgba($black, 0.075);
 
 $brand-primary: $heading-green;
 
+$background-color: $white;
+$background-color-alt: $very-light-gray;
 
 $table-border-color: $gray;
 
@@ -25,3 +27,5 @@ $table-border-color: $gray;
 $padding2px:2px;
 $space-size: 20px;
 $opacity: 0.6;
+
+$sidebar-width: 220px;
