Removed examples from form sections

--- a/src/main/webapp/form/select.scss
+++ b/src/main/webapp/form/select.scss
@@ -17,24 +17,9 @@ markup:
 <form>
 	<label for="select-single-option">Select with no selection</label>
 	<select id="select-single-option">
-	  <option value="">Ignored placeholder value</option>
+	  <option>Ignored placeholder value</option>
 	  <option value="selected-default-option">Selected default option</option>
 	</select>
-	<label for="select-no-selection">Select with no selection</label>
-	<select id="select-no-selection" placeholder="Customizable placeholder">
-	  <option value="1">1</option>
-	  <option value="2">2</option>
-	</select>
-	<label for="select-with-selection">Select with selected value</label>
-	<select id="select-with-selection">
-	  <option value="1">1</option>
-	  <option value="2" selected="selected">2</option>
-	</select>
-	<label for="select-no-placeholder">Select with no placeholder <em>(not recommended)</em></label>
-	<select id="select-no-placeholder" no-placeholder>
-      <option value="1">This will be immedately selected</option>
-      <option value="2">This is another option</option>
-    </select>
 	<fieldset ng-init="
 		selectValue='animal';
 		options = {
