--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -40,4 +40,11 @@
     @extend .pull-right;
   }
 
+  h1, h2, h3, h4{
+    font-size: 1.5em;
+    float: left;
+    clear: left;
+    margin: 0px;
+  }
+
 }
