--- a/src/main/webapp/form/form-filter.scss
+++ b/src/main/webapp/form/form-filter.scss
@@ -1,7 +1,7 @@
 
 .form-filter{
 	display: flex;
-	align-items: flex-end;
+	align-items: flex-start;
 	.form-group{
 		flex: 0 0 auto;
 		margin-left: 1em;
