--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -25,7 +25,7 @@
     <nav class="navbar">
       <ul class="nav navbar-nav">
         <li class="">
-          <a class="" href="./">
+          <a class="" href="./index.html">
             <em>0</em>
             <em>Overview</em>
           </a>
