--- a/src/main/webapp/requisitions/approval-list/approval-list.scss
+++ b/src/main/webapp/requisitions/approval-list/approval-list.scss
@@ -1,9 +1,8 @@
 .approval-list {
 
-	.grid {
-		width: 100%;
-		margin-top: 0.5em;
-		border: 0.1em solid rgb(212, 212, 212);
-	}
-	
+    table {
+        tr:hover td {
+            background: $light-gray;
+        }
+    }
 }
