OLMIS-1477: changed total adjustments text and background color on modal

--- a/src/main/webapp/requisitions/requisition/losses-and-adjustments/losses-and-adjustment.scss
+++ b/src/main/webapp/requisitions/requisition/losses-and-adjustments/losses-and-adjustment.scss
@@ -51,6 +51,7 @@ max-height: 15em;
   font-size: 1.2em;
   font-weight: bold;
   text-align: right;
+  background-color: $background-color-alt;
 }
 
 .adjustment-warning {
