OLMIS-1468: Extracted openlmis-modal module

--- a/src/main/webapp/openlmis-modal/loading-modal.scss
+++ b/src/main/webapp/openlmis-modal/loading-modal.scss
@@ -16,7 +16,7 @@
       width: 2em;
       height: 2em;
       margin: 0.5em;
-      background-image: url('dashboard/loading-modal.gif');
+      background-image: url('openlmis-modal/loading-modal.gif');
       background-size: 2em;
       background-repeat: no-repeat;
       background-position: center center;
