--- a/src/main/webapp/common/page-hero.scss
+++ b/src/main/webapp/common/page-hero.scss
@@ -21,7 +21,7 @@
 		z-index: -1;
 		height: 100%;
 		width: 100%;
-		background: $light-gray url(images/page-hero-glow.png) no-repeat center -2em;
+		background: $light-gray url(common/page-hero-glow.png) no-repeat center -2em;
 	}
 }
 
@@ -57,3 +57,4 @@
     left: 0;
   }
 }
+
