OLMIS-1084: Removed ability to skip non-full-supply products
*Removed ability to skip non-full-supply products
*Refactored skipping/unskipping all products in full supply controller
*Product is grayed out when skipped now
*Refactored line-item canBeSkipped method

--- a/src/main/webapp/requisition-product-grid/product-grid.scss
+++ b/src/main/webapp/requisition-product-grid/product-grid.scss
@@ -6,6 +6,10 @@
 		display: table;
 	}
 
+	.skipped-line-item {
+		background: $light-gray;
+	}
+
 	button {
 		@extend .btn;
 	}
@@ -18,5 +22,4 @@
 	button.hide-line-item {
 		@include button-color($red);
 	}
-
 }
