OLMIS-1451: Improved requisition-summary css file

--- a/src/main/webapp/requisition-summary/requisition-summary.scss
+++ b/src/main/webapp/requisition-summary/requisition-summary.scss
@@ -32,7 +32,7 @@
         justify-content: space-between;
         padding: 1em;
 
-        h1, i {
+        h1, h1 + i {
             border: initial;
             font-size: 1.1em;
             font-weight: bold;
