--- a/src/main/webapp/requisition-summary/requisition-summary.scss
+++ b/src/main/webapp/requisition-summary/requisition-summary.scss
@@ -31,6 +31,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         padding: 1em;
+        width: 100%;
 
         h1, h1 + i {
             border: initial;
