OLMIS-1353: added pinned columns to table

--- a/src/main/webapp/common/content.scss
+++ b/src/main/webapp/common/content.scss
@@ -5,29 +5,10 @@ table .productCategory,
   text-shadow: 0.1em 0.1em 0 $light-shadow;
   color: $white;
   font-weight: bold;
+  border: none;
   .ngAggregateText {
     left: 0.9em;
   }
-}
-
-.grid {
-  @include size(400px 100%);
-  border: 0.1em solid rgb(212, 212, 212);
-}
-
-.grid-filters {
-  padding: 0.7em 0 1.4em;
-  text-align: right;
-  display: flex;
-  .search-query {
-    width: 10em;
-    padding: 0.25em 0.4em;
-    margin-top: 0;
-  }
-}
-
-.grid-btn {
-  margin: 0.2em 0.2em;
 }
 
 #viewReqList, #approveReqList {
@@ -82,21 +63,6 @@ table .productCategory,
     border-width: 39px 0 39px 15px;
     margin-top: -39px;
   }
-}
-
-.table-container {
-  overflow: auto;
-  table {
-    max-width: 100%;
-    word-wrap: break-word;
-  }
-}
-
-table.search-list {
-  border: 0.1em solid $light-gray;
-  border-left: 0;
-  position: relative;
-  margin: 0.8em 0;
 }
 
 .col-emergency {
