--- a/src/main/webapp/openlmis-table/table-container.scss
+++ b/src/main/webapp/openlmis-table/table-container.scss
@@ -137,6 +137,7 @@ Styleguide 4.1
         flex: 1 1 auto;
         overflow: auto;
         margin: 0px;
+        position: relative; // tell JS to calculate offset from here
         table {
             margin: 0px;
             padding: 0px;
