OLMIS-1602: Added offline icons to header navigation

--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -21,6 +21,8 @@ $brand-primary: $heading-green;
 $background-color: $white;
 $background-color-alt: $very-light-gray;
 
+$text-color-disabled: $gray;
+
 $table-border-color: $gray;
 
 // Spacing
