--- a/src/main/webapp/openlmis-offline/offline.scss
+++ b/src/main/webapp/openlmis-offline/offline.scss
@@ -1,4 +1,27 @@
 
-.offline-ui {  // Offline linrary is adding div element with this class
-  display: none;   // so we don't want to display it
+.offline-ui {  // Offline.js adds a div element with this class
+  display: none;   // which we don't want to display
+}
+
+/*
+Offline
+
+When the UI is offline, any actions that were possible will be shown as disabled.
+
+markup:
+<a class="is-offline">This is an offline link</a>
+<button class="is-offline">Offline Button</button>
+
+Styleguide 5.0
+*/
+
+a.is-offline,
+button.is-offline{
+	&::before{
+		content: "\f0e7";
+		font-family: 'FontAwesome';
+		display: inline-block;
+		padding-right: 1em;
+		line-height: 1em; 
+	}
 }
