--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -31,3 +31,5 @@ $space-size: 20px;
 $opacity: 0.6;
 
 $sidebar-width: 220px;
+
+$table-border: 1px $light-gray solid !important; // this important is needed to override borders from inherited
