--- a/src/main/webapp/openlmis-table/tables.scss
+++ b/src/main/webapp/openlmis-table/tables.scss
@@ -90,15 +90,18 @@ Styleguide 4.0
 table{
     @extend .table;
 
-    border: 1px $light-gray solid;
     border-collapse: separate;
 
-    td, th{
+    th:first-child, td:first-child {
+        border-left: $table-border;
+    }
+
+    td, th {
         padding: 1em;
         vertical-align: middle !important; // from requisition template screen
         border-top: none !important;
-        border-bottom: 1px $light-gray solid !important;   // all those important are needed to override borders from
-        border-right: 1px $light-gray solid !important;
+        border-bottom: $table-border;
+        border-right: $table-border;
     }
 
     td {
@@ -106,6 +109,7 @@ table{
     }
 
     th {
+        border-top: $table-border;
         @include linear-gradient(to top, $light-gray, lighten($light-gray, 15%), $fallback: $light-gray);
         white-space: nowrap;
     }
