--- a/src/main/webapp/admin-template/template.scss
+++ b/src/main/webapp/admin-template/template.scss
@@ -24,16 +24,16 @@
 				cursor: move;
 			}
 
-			.moveable:hover td {
+			.moveable:hover > td {
 				background-color: $very-light-gray;
 			}
 
-			.dndPlaceholder td {
+			.dndPlaceholder > td {
 				background-color: $light-shadow;
 				height: 3em;
 			}
 
-			.pinned td {
+			.pinned > td {
 				background-color: $medium-gray;
 			}
 
