removed unnecessary margin in template view table

--- a/src/main/webapp/openlmis-table/tables.scss
+++ b/src/main/webapp/openlmis-table/tables.scss
@@ -87,7 +87,7 @@ Styleguide 4.0
 
 @import 'bourbon';
 
-.table-container, .product-grid {
+.table-container, .product-grid, .template-container {
 
     table{
         @extend .table;
