--- a/src/main/webapp/common/base.scss
+++ b/src/main/webapp/common/base.scss
@@ -11,7 +11,16 @@
 /*
 Base
 
-This is section about the basic styles that are used through the OpenLMIS Platform. There are several subsections for various forms used in OpenLMIS.
+This is section about the basic styles that are used through the OpenLMIS-UI.
+
+markup:
+<p>Example paragraph that shows how copy should flow. <a >If there were a link, it would look like this.</a></p>
+<p>There can also be <a disabled>disabled links.</a></p>
+<p>This is the most general content style, and will be used to clearly show:</p>
+<ul>
+  <li>Instructions</li>
+  <li>Descriptive pages</li>
+</ul>
 
 Styleguide 1.0
 */
@@ -30,105 +39,39 @@ body {
   src: url('../fonts/HelveticaNeue-CondensedBold.woff') format('woff'); /* Modern Browsers */
 }
 
-//bootstrap overrides: buttons
-
-.btn-group.open .btn-primary.dropdown-toggle {
-  background-color: $green;
-}
-
 a {
   color: $heading-green;
   &:hover {
-    color: darken($cyan, 25%);
+    color: darken($heading-green, 15%);
   }
   cursor: pointer;
+  &[disabled]{
+    color: $gray;
+  }
 }
 
-textarea {
-  resize: none;
+h1, h2 {
+  margin-top: 0;
+  border-bottom: 0.1em solid $light-gray;
+  font-weight: normal;
+  color: $heading-green;
+  line-height: 2em;
 }
 
-input[type="text"]::-ms-clear {
-  display: none;
+h2 {
+  font-size: 1.4em;
 }
 
-
-input[type='file'] {
-  line-height: normal;
+h1 {
+  font-size: 1.6em;
 }
 
-input[type='text'] {
-  outline: 0 none !important;
-}
-
-input[placeholder].placeholder {
-  color: $medium-gray;
-}
-
-span.required {
-  color: #d31717;
-  font-weight: bold;
-}
-
-// hide element, but keep it accessible by screen readers
-.visuallyhidden {
-  position: absolute;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  height: 1px; width: 1px;
-  margin: -1px; padding: 0; border: 0;
-}
-
-textarea:focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-.uneditable-input:focus {
-  border-color: $heading-green;
-  outline: 0;
-  outline: thin dotted     \9;
-  box-shadow: inset 0 0.1em 0.1em $light-shadow, 0 0 0.5em rgba($cyan, 0.6);
-}
 
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {
   color: $dark-gray;
   background: lighten($cyan, 45%);
-}
-
-select {
-  box-shadow: none;
-}
-
-//modal
-
-.modal-header {
-  border-color: $medium-gray;
-  h3 {
-    color: $heading-green;
-    font-weight: normal;
-    font-size: 1.4em;
-  }
-}
-
-.modal-footer {
-  text-align: left;
-}
-
-.modal-open {
-  overflow:auto !important;
 }
 
 .row-fluid [class*="span"] {
