--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -58,6 +58,10 @@ input, a {
   }
 }
 
+.btn-group.open .btn-primary.dropdown-toggle {
+  background-color: $green;
+}
+
 .grid-btn {
   margin: 0.2em 0.2em;
 }
