--- a/src/main/webapp/openlmis-form/form.scss
+++ b/src/main/webapp/openlmis-form/form.scss
@@ -95,6 +95,63 @@ Styleguide 3.0
 // form > fieldset{
 // 	@extend form;
 // }
+// 
+textarea {
+  resize: none;
+}
+
+input[type="text"]::-ms-clear {
+  display: none;
+}
+
+
+input[type='file'] {
+  line-height: normal;
+}
+
+input[type='text'] {
+  outline: 0 none !important;
+}
+
+input[placeholder].placeholder {
+  color: $medium-gray;
+}
+
+span.required {
+  color: #d31717;
+  font-weight: bold;
+}
+
+// hide element, but keep it accessible by screen readers
+.visuallyhidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px; width: 1px;
+  margin: -1px; padding: 0; border: 0;
+}
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+  border-color: $heading-green;
+  outline: 0;
+  outline: thin dotted     \9;
+  box-shadow: inset 0 0.1em 0.1em $light-shadow, 0 0 0.5em rgba($cyan, 0.6);
+}
 
 .ng-submitted {
 
