--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -1,8 +1,6 @@
-
 table td.delete-button {
-  text-align: center;
+    text-align: center;
 }
-
 /*
 Buttons
 
@@ -18,6 +16,8 @@ markup:
     <i class="icon-cog"></i>
     <span>Configure Button</span>
   </a>
+  <button class="btn btn-print"></button>
+  <button class="btn btn-download"></button>
   </br>
   </br>
   <button type="button" class="btn btn-default" disabled="disabled">Disabled Default Button</button>
@@ -34,34 +34,55 @@ markup:
 
 Styleguide 1.3
 */
-
-.button{
-  text-shadow: 0.1em 0.1em 0.1em $shadow;
-  @include button-color($gray);
-  padding: 0.5em 1em;
-  line-height: 1em;
-  border-color: rgba($white, 0.3) $shadow $light-shadow;
- }
-
-input, a {
-  &.btn-default {
-    @extend .button;
-  }
-
-  &.btn-primary {
-    @include button-color($green);
-  }
-
-  &.delete-button{
-    @extend .button;
-    @include button-color($red);
-  }
+.button {
+    text-shadow: 0.1em 0.1em 0.1em $shadow;
+    @include button-color($gray);
+    padding: 0.5em 1em;
+    line-height: 1em;
+    border-color: rgba($white, 0.3) $shadow $light-shadow;
 }
 
-.btn-group.open .btn-primary.dropdown-toggle {
-  background-color: $green;
+a,
+input {
+    &.btn-default {
+        @extend .button;
+    }
+
+    &.btn-primary {
+        @include button-color($green);
+    }
+
+    &.delete-button {
+        @extend .button;
+        @include button-color($red);
+    }
 }
 
 .grid-btn {
-  margin: 0.2em 0.2em;
+    margin: 0.2em;
+}
+
+.btn-group.open .btn-primary.dropdown-toggle {
+    background-color: $green;
+}
+
+.grid-btn {
+    margin: 0.2em;
+}
+
+.btn-download,
+.btn-print {
+    @include button-color($green);
+
+    &:after {
+        font-family: 'FontAwesome';
+    }
+}
+
+.btn-download:after {
+    content: '\f019';
+}
+
+.btn-print:after {
+    content: '\f02f';
 }
