OLMIS-1087: Added print button for all requisitions
Also added directive which has been created by @ngraczewski to add access token to the url

--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -56,6 +56,11 @@ input {
         @extend .button;
         @include button-color($red);
     }
+
+    &.btn-print-rnr {
+        @include button-color($green);
+        @extend .pull-right;
+    }
 }
 
 .grid-btn {
