--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -56,10 +56,11 @@ input {
         @extend .button;
         @include button-color($red);
     }
+}
 
-    &.btn-print-rnr {
-        @include button-color($green);
-        @extend .pull-right;
+a {
+    &.btn-primary {
+        float: right;
     }
 }
 
