OLMIS-1745: Added error indication to tabs on the requisition screen

--- a/src/main/webapp/requisition-view/requisition-view.scss
+++ b/src/main/webapp/requisition-view/requisition-view.scss
@@ -1,6 +1,11 @@
-
 .requisition-view > h2 > a {
     &.btn-primary {
         float: right;
     }
+}
+
+.error-indicator:after {
+    color: $red;
+    content: ' \f06a';
+    font-family: 'FontAwesome';
 }
